--- a/index.html
+++ b/index.html
@@ -17,23 +17,60 @@
 </head>
 
 <body>
-    <nav>
-
+    <!-- Navigation Bar -->
+    <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#landing">
+            <img src="assets/img/logo.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="#art">Art</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#about">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#projects">Projects</a>
+                </li>
+            </ul>
+        </div>
     </nav>
-    
+
     <!-- Landing Section -->
     <section id="landing">
+        <h3>We are</h3>
+        <h1>Invention Corps</h1>
+    </section>
+
+    <!-- Art Piece Section -->
+    <section id="art">
+
     </section>
 
     <!-- About Section -->
     <section id="about">
         <h2>Inventing a better tomorrow</h2>
+        <p>
+            Provide some context on the org you partnered with, your team members, and the overall problem you were trying to solve. Include your how might we question here as well. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis at tincidunt enim, eu hendrerit odio. Phasellus ut tristique est. Mauris rutrum lorem et purus elementum dignissim. Etiam fermentum urna eget elit semper congue. Nulla vel leo pharetra, pretium arcu nec, lobortis odio. Proin vitae maximus massa, congue mattis ligula. Mauris vitae arcu libero. Nulla sed diam sed metus pretium porttitor. In pretium quam quis facilisis venenatis. Donec quis nulla malesuada, feugiat nisi et, porta est.
+        </p>
     </section>
 
     <!-- Projects Section -->
     <section id="projects">
         <h2>Our Projects</h2>
+        <div class="projects-container">
+
+        </div>
     </section>
+
+    <!-- Footer -->
+    <footer>
+
+    </footer>
 
     <!-- Bootstrap Scripts -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
