added routes to project pages

--- a/index.html
+++ b/index.html
@@ -42,28 +42,81 @@
 
     <!-- Landing Section -->
     <section id="landing">
-        <h3>We are</h3>
-        <h1>Invention Corps</h1>
+        <div class="container">
+            <h3>We are</h3>
+            <h1>Invention Corps</h1>
+        </div>
     </section>
 
     <!-- Art Piece Section -->
     <section id="art">
-
+        <div class="container">
+            <h2>Spring 2020 Showcase</h2>
+        </div>
     </section>
 
     <!-- About Section -->
     <section id="about">
-        <h2>Inventing a better tomorrow</h2>
-        <p>
-            Provide some context on the org you partnered with, your team members, and the overall problem you were trying to solve. Include your how might we question here as well. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis at tincidunt enim, eu hendrerit odio. Phasellus ut tristique est. Mauris rutrum lorem et purus elementum dignissim. Etiam fermentum urna eget elit semper congue. Nulla vel leo pharetra, pretium arcu nec, lobortis odio. Proin vitae maximus massa, congue mattis ligula. Mauris vitae arcu libero. Nulla sed diam sed metus pretium porttitor. In pretium quam quis facilisis venenatis. Donec quis nulla malesuada, feugiat nisi et, porta est.
-        </p>
+        <div class="container">
+            <h2>Inventing a better tomorrow</h2>
+            <p>
+                Provide some context on the org you partnered with, your team members, and the overall problem you were trying to solve. Include your how might we question here as well. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis at tincidunt enim, eu hendrerit odio. Phasellus ut tristique est. Mauris rutrum lorem et purus elementum dignissim. Etiam fermentum urna eget elit semper congue. Nulla vel leo pharetra, pretium arcu nec, lobortis odio. Proin vitae maximus massa, congue mattis ligula. Mauris vitae arcu libero. Nulla sed diam sed metus pretium porttitor. In pretium quam quis facilisis venenatis. Donec quis nulla malesuada, feugiat nisi et, porta est.
+            </p>
+        </div>
     </section>
 
     <!-- Projects Section -->
     <section id="projects">
-        <h2>Our Projects</h2>
-        <div class="projects-container">
-
+        <div class="container">
+            <h2>Our Projects</h2>
+            <div class="projects-container">
+                <div class="row">
+                    <div class="col-12 col-md-3">
+                        <div class="card">
+                            <a href="projects/alemany-farm.html">
+                                <img class="card-img" src="assets/img/placeholder.png" alt="Alemany Farm">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-3">
+                        <div class="card">
+                            <a href="projects/alemany-farm.html">
+                                <img class="card-img" src="assets/img/placeholder.png" alt="Alemany Farm">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-3">
+                        <div class="card">
+                            <a href="projects/alemany-farm.html">
+                                <img class="card-img" src="assets/img/placeholder.png" alt="Alemany Farm">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-md-3">
+                        <div class="card">
+                            <a href="projects/alemany-farm.html">
+                                <img class="card-img" src="assets/img/placeholder.png" alt="Alemany Farm">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-3">
+                        <div class="card">
+                            <a href="projects/alemany-farm.html">
+                                <img class="card-img" src="assets/img/placeholder.png" alt="Alemany Farm">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-3">
+                        <div class="card">
+                            <a href="projects/alemany-farm.html">
+                                <img class="card-img" src="assets/img/placeholder.png" alt="Alemany Farm">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -71,6 +124,10 @@
     <footer>
 
     </footer>
+
+    <div id="particles">
+
+    </div>
 
     <!-- Bootstrap Scripts -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
