updated projects grid to have opacity and better spacing

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                         <a class="nav-link" href="#art">Art</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#about">About</a>
+                        <a class="nav-link" href="#projects">Work</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#projects">Projects</a>
+                        <a class="nav-link" href="#about">About</a>
                     </li>
                 </ul>
             </div>
@@ -78,55 +78,38 @@
     <section id="projects">
         <div class="container">
             <h2>Our Projects</h2>
-            <div class="projects-container">
-                <div class="row">
-                    <div class="col-12 col-md-3">
-                        <div class="card">
-                            <a href="projects/alemany-farm.html">
-                                <img class="card-img" src="assets/img/placeholder.png" alt="Alemany Farm">
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-3">
-                        <div class="card">
-                            <a href="projects/alemany-farm.html">
-                                <img class="card-img" src="assets/img/placeholder.png" alt="Alemany Farm">
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-3">
-                        <div class="card">
-                            <a href="projects/alemany-farm.html">
-                                <img class="card-img" src="assets/img/placeholder.png" alt="Alemany Farm">
-                            </a>
-                        </div>
-                    </div>
+            <div class="row"> 
+                <div class="column">
+                    <a href="projects/alemany-farm.html">
+                        <img src="assets/img/square_placeholder.png" style="width:100%" alt="Alemany Farms">
+                    </a>
                 </div>
-                <div class="row">
-                    <div class="col-12 col-md-3">
-                        <div class="card">
-                            <a href="projects/alemany-farm.html">
-                                <img class="card-img" src="assets/img/placeholder.png" alt="Alemany Farm">
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-3">
-                        <div class="card">
-                            <a href="projects/alemany-farm.html">
-                                <img class="card-img" src="assets/img/placeholder.png" alt="Alemany Farm">
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-3">
-                        <div class="card">
-                            <a href="projects/alemany-farm.html">
-                                <img class="card-img" src="assets/img/placeholder.png" alt="Alemany Farm">
-                            </a>
-                        </div>
-                    </div>
+                <div class="column">
+                    <a href="projects/alemany-farm.html">
+                        <img src="assets/img/square_placeholder.png" style="width:100%">
+                    </a>
+                </div>  
+                <div class="column">
+                    <a href="projects/alemany-farm.html">
+                        <img src="assets/img/square_placeholder.png" style="width:100%">
+                    </a>
                 </div>
-            </div>
-        </div>
+              </div>
+              <div class="row"> 
+                <div class="column">
+                    <a href="projects/alemany-farm.html">
+                        <img src="assets/img/square_placeholder.png" style="width:100%">
+                    </a>                </div>
+                <div class="column">
+                    <a href="projects/alemany-farm.html">
+                        <img src="assets/img/square_placeholder.png" style="width:100%">
+                    </a>                </div>  
+                <div class="column">
+                    <a href="projects/alemany-farm.html">
+                        <img src="assets/img/square_placeholder.png" style="width:100%">
+                    </a>                </div>
+              </div>
+              
     </section>
 
     <!-- Footer -->
