--- a/projects/alemany-farm.html
+++ b/projects/alemany-farm.html
@@ -7,6 +7,7 @@
 
   <title>Invention Corps</title>
   <meta name="description" content="We are the Invention Corps."/>
+  <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon" />
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;800&family=Playfair+Display:ital@1&display=swap" rel="stylesheet">
