added contact view

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#about">About</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact">Contact</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -100,6 +103,16 @@
                         <img src="assets/img/square_placeholder.png" style="width:100%">
                     </a>                </div>
               </div>   
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact">
+        <div class="container">
+            <h2>Get in touch!</h2>
+            <p>
+                Provide some context on the org you partnered with, your team members, and the overall problem you were trying to solve. Include your how might we question here as well. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis at tincidunt enim, eu hendrerit odio. Phasellus ut tristique est. Mauris rutrum lorem et purus elementum dignissim. Etiam fermentum urna eget elit semper congue. Nulla vel leo pharetra, pretium arcu nec, lobortis odio. Proin vitae maximus massa, congue mattis ligula. Mauris vitae arcu libero. Nulla sed diam sed metus pretium porttitor. In pretium quam quis facilisis venenatis. Donec quis nulla malesuada, feugiat nisi et, porta est.
+            </p>
+        </div>
     </section>
 
     <!-- About Section -->
