make circles bigger to see what it looked like, added art piece, added some thumbnails

--- a/index.html
+++ b/index.html
@@ -61,11 +61,23 @@
         <div id="particles-js"></div>
     </section>
 
+    <!-- About Section -->
+    <section id="about">
+        <div class="container">
+            <h2>Inventing a better tomorrow</h2>
+            <p>
+                Provide some context on the org you partnered with, your team members, and the overall problem you were trying to solve. Include your how might we question here as well. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis at tincidunt enim, eu hendrerit odio. Phasellus ut tristique est. Mauris rutrum lorem et purus elementum dignissim. Etiam fermentum urna eget elit semper congue. Nulla vel leo pharetra, pretium arcu nec, lobortis odio. Proin vitae maximus massa, congue mattis ligula. Mauris vitae arcu libero. Nulla sed diam sed metus pretium porttitor. In pretium quam quis facilisis venenatis. Donec quis nulla malesuada, feugiat nisi et, porta est.
+            </p>
+        </div>
+    </section>
+
     <!-- Art Piece Section -->
     <section id="art">
         <div class="container">
             <h2>Spring 2020 Showcase</h2>
+            <img src="assets/img/artpiece.svg" />
         </div>
+        
     </section>
 
     <!-- Projects Section -->
@@ -75,17 +87,17 @@
             <div class="row"> 
                 <div class="column">
                     <a href="projects/alemany-farm.html">
-                        <img src="assets/img/square_placeholder.png" style="width:100%" alt="Alemany Farms">
+                        <img src="assets/img/alemany.png" style="width:100%" alt="Alemany Farms">
                     </a>
                 </div>
                 <div class="column">
                     <a href="projects/alemany-farm.html">
-                        <img src="assets/img/square_placeholder.png" style="width:100%">
+                        <img src="assets/img/ucbcafe.png" style="width:100%">
                     </a>
                 </div>  
                 <div class="column">
                     <a href="projects/alemany-farm.html">
-                        <img src="assets/img/square_placeholder.png" style="width:100%">
+                        <img src="assets/img/neomotion.png" style="width:100%">
                     </a>
                 </div>
               </div>
@@ -109,16 +121,6 @@
     <section id="contact">
         <div class="container">
             <h2>Get in touch!</h2>
-            <p>
-                Provide some context on the org you partnered with, your team members, and the overall problem you were trying to solve. Include your how might we question here as well. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis at tincidunt enim, eu hendrerit odio. Phasellus ut tristique est. Mauris rutrum lorem et purus elementum dignissim. Etiam fermentum urna eget elit semper congue. Nulla vel leo pharetra, pretium arcu nec, lobortis odio. Proin vitae maximus massa, congue mattis ligula. Mauris vitae arcu libero. Nulla sed diam sed metus pretium porttitor. In pretium quam quis facilisis venenatis. Donec quis nulla malesuada, feugiat nisi et, porta est.
-            </p>
-        </div>
-    </section>
-
-    <!-- About Section -->
-    <section id="about">
-        <div class="container">
-            <h2>Inventing a better tomorrow</h2>
             <p>
                 Provide some context on the org you partnered with, your team members, and the overall problem you were trying to solve. Include your how might we question here as well. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis at tincidunt enim, eu hendrerit odio. Phasellus ut tristique est. Mauris rutrum lorem et purus elementum dignissim. Etiam fermentum urna eget elit semper congue. Nulla vel leo pharetra, pretium arcu nec, lobortis odio. Proin vitae maximus massa, congue mattis ligula. Mauris vitae arcu libero. Nulla sed diam sed metus pretium porttitor. In pretium quam quis facilisis venenatis. Donec quis nulla malesuada, feugiat nisi et, porta est.
             </p>
