--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   <meta name="description" content="We are the Invention Corps."/>
   <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon" />
 
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;800&family=Playfair+Display:ital@1&display=swap" rel="stylesheet">
+  <!-- Custom Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,600;1,700&display=swap" rel="stylesheet">
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/bd860f6242.js" crossorigin="anonymous"></script>
   <!-- Bootstrap Styling -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <!-- Custom Styling -->
@@ -23,7 +25,7 @@
         <div class="container">
             <div class="d-flex flex-grow-1">
                 <a class="navbar-brand" href="#landing">
-                    <img src="assets/img/logo.svg" width="65" height="65" class="d-inline-block align-top" alt="Invention Corps Logo">
+                    <img src="assets/img/logo.svg" width="30" height="30" class="d-inline-block align-top" alt="Invention Corps Logo">
                 </a>
                 <div class="w-100 text-right">
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,13 +36,13 @@
             <div class="collapse navbar-collapse flex-grow-1 text-right" id="navbarNav">
                 <ul class="navbar-nav ml-auto flex-nowrap">
                     <li class="nav-item">
-                        <a class="nav-link" href="#art">Art</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#projects">Work</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="#about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#projects">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#members">Members</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
@@ -71,68 +73,89 @@
         </div>
     </section>
 
-    <!-- Art Piece Section -->
-    <section id="art">
-        <div class="container">
-            <h2>Spring 2020 Showcase</h2>
-            <img src="assets/img/artpiece.svg" />
-        </div>
-        
-    </section>
-
     <!-- Projects Section -->
     <section id="projects">
         <div class="container">
             <h2>Our Projects</h2>
-            <div class="row"> 
-                <div class="column">
-                    <a href="projects/alemany-farm.html">
-                        <img src="assets/img/alemany.png" style="width:100%" alt="Alemany Farms">
-                    </a>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Consequat nunc, enim libero varius purus, consectetur vel sem. </p>
+            <div class="projects-container">
+                <div class="row">
+                    <div class="col-12 col-md-3">
+                        <div class="card">
+                            <a href="projects/alemany-farm.html">
+                                <img class="card-img" src="assets/img/placeholder.png" alt="Alemany Farm">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-3">
+                        <div class="card">
+                            <a href="projects/alemany-farm.html">
+                                <img class="card-img" src="assets/img/placeholder.png" alt="Alemany Farm">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-3">
+                        <div class="card">
+                            <a href="projects/alemany-farm.html">
+                                <img class="card-img" src="assets/img/placeholder.png" alt="Alemany Farm">
+                            </a>
+                        </div>
+                    </div>
                 </div>
-                <div class="column">
-                    <a href="projects/alemany-farm.html">
-                        <img src="assets/img/ucbcafe.png" style="width:100%">
-                    </a>
-                </div>  
-                <div class="column">
-                    <a href="projects/alemany-farm.html">
-                        <img src="assets/img/neomotion.png" style="width:100%">
-                    </a>
+                <div class="row">
+                    <div class="col-12 col-md-3">
+                        <div class="card">
+                            <a href="projects/alemany-farm.html">
+                                <img class="card-img" src="assets/img/placeholder.png" alt="Alemany Farm">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-3">
+                        <div class="card">
+                            <a href="projects/alemany-farm.html">
+                                <img class="card-img" src="assets/img/placeholder.png" alt="Alemany Farm">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-3">
+                        <div class="card">
+                            <a href="projects/alemany-farm.html">
+                                <img class="card-img" src="assets/img/placeholder.png" alt="Alemany Farm">
+                            </a>
+                        </div>
+                    </div>
                 </div>
-              </div>
-              <div class="row"> 
-                <div class="column">
-                    <a href="projects/alemany-farm.html">
-                        <img src="assets/img/square_placeholder.png" style="width:100%">
-                    </a>                </div>
-                <div class="column">
-                    <a href="projects/alemany-farm.html">
-                        <img src="assets/img/square_placeholder.png" style="width:100%">
-                    </a>                </div>  
-                <div class="column">
-                    <a href="projects/alemany-farm.html">
-                        <img src="assets/img/square_placeholder.png" style="width:100%">
-                    </a>                </div>
-              </div>   
+            </div>
+        </div>
+    </section>
+
+    <!-- Art Piece Section -->
+    <section id="members">
+        <div class="container">
+            <h2>Spring 2020 Showcase</h2>
+        </div>
     </section>
 
     <!-- Contact Section -->
     <section id="contact">
         <div class="container">
-            <h2>Get in touch!</h2>
-            <p>
-                Provide some context on the org you partnered with, your team members, and the overall problem you were trying to solve. Include your how might we question here as well. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis at tincidunt enim, eu hendrerit odio. Phasellus ut tristique est. Mauris rutrum lorem et purus elementum dignissim. Etiam fermentum urna eget elit semper congue. Nulla vel leo pharetra, pretium arcu nec, lobortis odio. Proin vitae maximus massa, congue mattis ligula. Mauris vitae arcu libero. Nulla sed diam sed metus pretium porttitor. In pretium quam quis facilisis venenatis. Donec quis nulla malesuada, feugiat nisi et, porta est.
-            </p>
+            <h2>Collaborate with us.</h2>
+            <div class="line"></div>
+            <div class="social-icons">
+                <a href=""><i class="fas fa-envelope"></i></a>
+                <a href=""><i class="fab fa-linkedin"></i></a>
+                <a href=""><i class="fab fa-facebook-square"></i></a>
+                <a href=""><i class="fab fa-instagram"></i></a>
+            </div>
         </div>
     </section>
 
     <!-- Footer -->
-    <footer>
+    <!-- <footer>
         <div class="container d-flex justify-content-center align-items-center">
             <p>Invention Corps 2020</p>
         </div>
-    </footer>
+    </footer> -->
 
     <!-- Bootstrap Scripts -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
