--- a/projects/alemany-farm.html
+++ b/projects/alemany-farm.html
@@ -7,9 +7,12 @@
 
   <title>Invention Corps</title>
   <meta name="description" content="We are the Invention Corps."/>
+  <link rel="icon" href="../assets/img/favicon.ico" type="image/x-icon" />
 
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;800&family=Playfair+Display:ital@1&display=swap" rel="stylesheet">
+  <!-- Custom Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,600;1,700&display=swap" rel="stylesheet">
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/bd860f6242.js" crossorigin="anonymous"></script>
   <!-- Bootstrap Styling -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <!-- Custom Styling -->
@@ -33,13 +36,16 @@
             <div class="collapse navbar-collapse flex-grow-1 text-right" id="navbarNav">
                 <ul class="navbar-nav ml-auto flex-nowrap">
                     <li class="nav-item">
-                        <a class="nav-link" href="../index.html#art">Art</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="../index.html#about">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../index.html#projects">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../index.html#members">Members</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../index.html#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -136,11 +142,11 @@
     </div>
 
     <!-- Footer -->
-    <footer>
+    <!-- <footer>
         <div class="container d-flex justify-content-center align-items-center">
             <p>Invention Corps 2020</p>
         </div>
-    </footer>
+    </footer> -->
 
     <!-- Bootstrap Scripts -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
