--- a/projects/alemany-farm.html
+++ b/projects/alemany-farm.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="top">
 
 <head>
   <meta charset="UTF-8" />
@@ -24,7 +24,7 @@
     <nav class="navbar sticky-top navbar-expand-lg navbar-light">
         <div class="container">
             <div class="d-flex flex-grow-1">
-                <a class="navbar-brand" href="../index.html#landing">
+                <a class="navbar-brand" href="../index.html#top">
                     <img src="../assets/img/logo.svg" width="65" height="65" class="d-inline-block align-top" alt="Invention Corps Logo">
                 </a>
                 <div class="w-100 text-right">
@@ -38,7 +38,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="../index.html#about">About</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item" data-title="projects">
                         <a class="nav-link" href="../index.html#projects">Projects</a>
                     </li>
                     <li class="nav-item">
@@ -61,7 +61,7 @@
     <!-- Background -->
 
             <div class="container">
-                <h5>Background</h5>
+                <h5><span class="half-background">Background</span></h5>
                 <p>
                     yoyo hehelaskdflaskdnc;kj alsvlskjvklsd;alskdjfnvlkrjekljhfkjbvkjsbfdal
                 </p>
