--- a/projects/alemany-farm.html
+++ b/projects/alemany-farm.html
@@ -58,6 +58,14 @@
         <section class="article">
             <h1>Alemany Farm</h1>
 
+<!-- COLUMNS -->
+    <div class="row">
+      <div class="col-4">col-4</div>
+      <div class="col-8">col-8</div>
+    </div>
+
+
+
     <!-- Background -->
 
             <div class="container">
