more stuff with columns

--- a/projects/alemany-farm.html
+++ b/projects/alemany-farm.html
@@ -60,7 +60,8 @@
 
 <!-- COLUMNS -->
     <div class="row">
-      <div class="col-4">col-4</div>
+      <div class="">col-4</div>
+      <h5><span class="half-background">Background</span></h5>
       <div class="col-8">col-8</div>
     </div>
 
