--- a/projects/alemany-farm.html
+++ b/projects/alemany-farm.html
@@ -7,8 +7,8 @@
   box-sizing: border-box;
 }
 
-
 .Tbackground {
+  font-family: 'Montserrat';font-size: 22px;
   float: left;
   width: 25%;
   padding: 10px;
@@ -22,7 +22,6 @@
   height: 250px;
 }
 
-
 .Tempathize {
   float: left;
   width: 25%;
@@ -30,15 +29,12 @@
   height: 100px;
 }
 
-
-
 .empathize {
   float: left;
   width: 75%;
   padding: 10px;
   height: 100px;
 }
-
 
 .Tdefine {
   float: left;
@@ -72,14 +68,12 @@
 }
 
 
-
 .Tprototype {
   float: left;
   width: 25%;
   padding: 10px;
   height: 270px;
 }
-
 
 .prototype {
   float: left;
@@ -102,7 +96,6 @@
   padding: 10px;
   height: 100px;
 }
-
 
 .Tsolution {
   float: left;
@@ -175,6 +168,7 @@
 /* The title styling */
 .title {
 	text-align: center;
+  font-family: 'Montserrat';font-size: 22px;
 }
 
 </style>
