testing fonts with href

--- a/projects/alemany-farm.html
+++ b/projects/alemany-farm.html
@@ -3,16 +3,17 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
+<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 * {
   box-sizing: border-box;
 }
 
 .Tbackground {
-  font-family: 'Montserrat';font-size: 22px;
   float: left;
   width: 25%;
   padding: 10px;
   height: 250px;
+  font-family: 'Montserrat';font-size: 22px;
 }
 
 .background {
@@ -20,6 +21,7 @@
   width: 75%;
   padding: 10px;
   height: 250px;
+  font-family: 'Montserrat';font-size: 12px;
 }
 
 .Tempathize {
@@ -168,13 +170,11 @@
 /* The title styling */
 .title {
 	text-align: center;
-  font-family: 'Montserrat';font-size: 22px;
 }
 
 </style>
 </head>
 <body>
-font-family: 'Montserrat';font-size: 17px;
 <div class="title">
 <h1>Netic Health</h1>
 </div>
