--- a/index.html
+++ b/index.html
@@ -126,17 +126,15 @@
             </div>
             <h2>Colors of ICB</h2>
             <div id="art-container">
-                <img class="artpiece colored" src="assets/img/blobfinaldraft.png" />
-                <img class="artpiece grayscale" src="assets/img/blobfinaldraft.png" />
-                <svg width="0" height="0">
+                <svg width="0" height="0" viewbox="0 0 500 500">
                     <defs>
-                        <clipPath id="myClip">
-                            <path fill="#FFFFFF" stroke="#000000" stroke-width="1.5794" stroke-miterlimit="10" d="M215,100.3c97.8-32.6,90.5-71.9,336-77.6
-        c92.4-2.1,98.1,81.6,121.8,116.4c101.7,149.9,53.5,155.9,14.7,178c-96.4,54.9,5.4,269-257,115.1c-57-33.5-203,46.3-263.7,20.1
-        c-33.5-14.5-132.5-45.5-95-111.1C125.9,246.6,98.6,139.1,215,100.3z"/>
+                        <clipPath id="myClip" clipPathUnits="objectBoundingBox" transform="scale(0.002 0.002)">
+                            <path class="cls-1" d="M216.08,296.3c16.6,33.37,19.1,47.27,37.56,64.2,31.83,29.21,73.68,33.11,79.78,33.6,32.39,2.6,37.28-9,61.32-2.29,21,5.86,23.71,16.5,57.38,43.07,34.34,27.1,52.35,41.31,78.8,44.94,37.38,5.13,69.25-13.95,73.34-16.48,27.73-17.11,28.85-34.82,47.33-37.78,24.63-3.94,56,22.21,63.86,51.25C729,527.08,673,589.46,624.13,617.41,544.35,663,430.45,647.27,388.69,585.52c-22.45-33.2-8.51-56.71-32.68-79-42-38.76-99.56,18.1-168.38-7-77-28.09-123.1-142.31-109.41-230.41,5.25-33.81,22.57-84.67,47.14-87.3C157.38,178.34,196.71,257.39,216.08,296.3Z"/><path class="cls-1" d="M44.22,205.19c15.43-8.65,3.29-36.08,23.43-62.71,3.72-4.92,20.7-27.37,41.88-26.83,30.48.78,38.87,48.39,64.19,47.48,19.13-.69,37.71-28.69,40.61-53.6,5.21-44.72-39.74-83.16-74.19-97.86C131,7.79,76.39-15.53,35.34,17.8,12.55,36.3,31.27,53,6.65,141c-5,17.89-10.51,34.41-2.4,48.35S32.28,211.88,44.22,205.19Z"/>
                         </clipPath>
                     </defs>
                 </svg>
+                <img class="artpiece colored" src="assets/img/blobfinaldraft.png" />
+                <img class="artpiece grayscale" src="assets/img/blobfinaldraft.png" />
                 <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 3899.18 2216.26"><defs><style>.cls-1,.cls-2{fill:#fff;stroke:#231f20;stroke-miterlimit:10;stroke-width:0.25px;}.cls-2{opacity:0.5;isolation:isolate;}</style>
                 </defs>
                     <g id="Alan_24" data-name="Alan 24"><path class="cls-1" d="M1444.91,2071.66c16.6,33.37,19.1,47.27,37.56,64.2,31.83,29.21,73.68,33.11,79.78,33.6,32.39,2.6,37.28-9,61.32-2.29,21,5.86,23.7,16.5,57.38,43.07,34.34,27.09,52.35,41.31,78.8,44.94,37.38,5.13,69.25-13.95,73.34-16.48,27.73-17.11,28.85-34.82,47.33-37.78,24.63-3.94,56,22.21,63.86,51.25,13.57,50.27-42.44,112.65-91.32,140.6-79.78,45.61-193.68,29.86-235.44-31.89-22.45-33.2-8.51-56.71-32.68-79-42-38.76-99.56,18.1-168.38-7-77-28.09-123.1-142.31-109.41-230.41,5.25-33.81,22.57-84.67,47.14-87.31C1386.21,1953.7,1425.54,2032.74,1444.91,2071.66Z" transform="translate(-743.49 -861.18)"/><path class="cls-1" d="M1273.05,1980.55c15.43-8.65,3.28-36.08,23.43-62.71,3.72-4.93,20.7-27.37,41.88-26.83,30.48.78,38.87,48.39,64.19,47.48,19.13-.69,37.71-28.69,40.61-53.6,5.21-44.73-39.74-83.16-74.19-97.86-9.1-3.88-63.75-27.2-104.8,6.13-22.79,18.5-4.07,35.18-28.69,123.19-5,17.89-10.51,34.4-2.4,48.35S1261.11,1987.24,1273.05,1980.55Z" transform="translate(-743.49 -861.18)"/></g>
