fixed background colors, font, added lines, added italics

--- a/projects/alemany-farm.html
+++ b/projects/alemany-farm.html
@@ -7,105 +7,222 @@
   box-sizing: border-box;
 }
 
-.Tbackground {
-  float: left;
-  width: 25%;
-  padding: 100px;
-  height: 250px;
+body {
+  font-family: 'Montserrat', sans-serif;
+  background-image: url("assets/img/stringtheorymoodboard-03 2.svg");
 }
 
-.background {
+/* The title styling */
+.title {
+	text-align: center;
+  padding-bottom: 0%;
+}
+
+.Tbackground {
+  border-top-style: solid;
+  border-top-width: 0.5px;
+  border-top-color: gray;
+  border-bottom-style: solid;
+  border-bottom-width: 0.5px;
+  border-bottom-color: gray;
   float: left;
-  width: 75%;
+  width: 20%;
+      /* top | right | bottom | left */
+  padding: 7px 12% 3em 6%;
+  height: 250px;
+  text-decoration: underline;
+  font-style: italic;
+}
+
+
+.background {
+  border-top-style: solid;
+  border-top-width: 0.5px;
+  border-top-color: gray;
+  border-bottom-style: solid;
+  border-bottom-width: 0.5px;
+  border-bottom-color: gray;
+  float: left;
+  width: 77%;
   padding: 10px;
   height: 250px;
 }
 
 .Tempathize {
+  border-top-style: solid;
+  border-top-width: 0.5px;
+  border-top-color: gray;
+  border-bottom-style: solid;
+  border-bottom-width: 0.5px;
+  border-bottom-color: gray;
   float: left;
-  width: 25%;
-  padding: 10px;
+  width: 20%;
+  /* top | right | bottom | left */
+  padding: 7px 6% 3em 6%;
   height: 100px;
+  text-decoration: underline;
+  font-style: italic;
 }
 
 .empathize {
+  border-top-style: solid;
+  border-top-width: 0.5px;
+  border-top-color: gray;
+  border-bottom-style: solid;
+  border-bottom-width: 0.5px;
+  border-bottom-color: gray;
   float: left;
-  width: 75%;
+  width: 77%;
   padding: 10px;
   height: 100px;
 }
 
 .Tdefine {
+  border-top-style: solid;
+  border-top-width: 0.5px;
+  border-top-color: gray;
+  border-bottom-style: solid;
+  border-bottom-width: 0.5px;
+  border-bottom-color: gray;
   float: left;
-  width: 25%;
-  padding: 10px;
+  width: 20%;
+  /* top | right | bottom | left */
+  padding: 7px 6% 3em 6%;
   height: 100px;
+  text-decoration: underline;
+  font-style: italic;
 }
 
 
 .define {
+  border-top-style: solid;
+  border-top-width: 0.5px;
+  border-top-color: gray;
+  border-bottom-style: solid;
+  border-bottom-width: 0.5px;
+  border-bottom-color: gray;
   float: left;
-  width: 75%;
+  width: 77%;
   padding: 10px;
   height: 100px;
 }
 
 
 .Tideate {
+  border-top-style: solid;
+  border-top-width: 0.5px;
+  border-top-color: gray;
+  border-bottom-style: solid;
+  border-bottom-width: 0.5px;
+  border-bottom-color: gray;
   float: left;
-  width: 25%;
-  padding: 10px;
+  width: 20%;
+  /* top | right | bottom | left */
+  padding: 7px 6% 3em 6%;
   height: 380px;
+  text-decoration: underline;
+  font-style: italic;
 }
 
 
 .ideate {
+  border-top-style: solid;
+  border-top-width: 0.5px;
+  border-top-color: gray;
+  border-bottom-style: solid;
+  border-bottom-width: 0.5px;
+  border-bottom-color: gray;
   float: left;
-  width: 75%;
+  width: 77%;
   padding: 10px;
   height: 380px;
 }
 
 
 .Tprototype {
+  border-top-style: solid;
+  border-top-width: 0.5px;
+  border-top-color: gray;
+  border-bottom-style: solid;
+  border-bottom-width: 0.5px;
+  border-bottom-color: gray;
   float: left;
-  width: 25%;
-  padding: 10px;
-  height: 270px;
+  width: 20%;
+  /* top | right | bottom | left */
+  padding: 7px 6% 3em 6%;
+  height: 277px;
+  text-decoration: underline;
+  font-style: italic;
 }
 
 .prototype {
+  border-top-style: solid;
+  border-top-width: 0.5px;
+  border-top-color: gray;
+  border-bottom-style: solid;
+  border-bottom-width: 0.5px;
+  border-bottom-color: gray;
   float: left;
-  width: 75%;
+  width: 77%;
   padding: 10px;
-  height: 270px;
+  height: 277px;
 }
 
 .Ttest {
+  border-top-style: solid;
+  border-top-width: 0.5px;
+  border-top-color: gray;
+  border-bottom-style: solid;
+  border-bottom-width: 0.5px;
+  border-bottom-color: gray;
   float: left;
-  width: 25%;
-  padding: 10px;
+  width: 20%;
+  /* top | right | bottom | left */
+  padding: 7px 6% 3em 6%;
   height: 100px;
+  text-decoration: underline;
+  font-style: italic;
 }
 
 
 .test {
+  border-top-style: solid;
+  border-top-width: 0.5px;
+  border-top-color: gray;
+  border-bottom-style: solid;
+  border-bottom-width: 0.5px;
+  border-bottom-color: gray;
   float: left;
-  width: 75%;
+  width: 77%;
   padding: 10px;
   height: 100px;
 }
 
 .Tsolution {
+  border-top-style: solid;
+  border-top-width: 0.5px;
+  border-top-color: gray;
+  border-bottom-style: solid;
+  border-bottom-width: 0.5px;
+  border-bottom-color: gray;
   float: left;
-  width: 25%;
-  padding: 10px;
+  width: 20%;
+  /* top | right | bottom | left */
+  padding: 7px 6% 3em 6%;
   height: 320px;
+  text-decoration: underline;
+  font-style: italic;
 }
 
 .solution {
+  border-top-style: solid;
+  border-top-width: 0.5px;
+  border-top-color: gray;
+  border-bottom-style: solid;
+  border-bottom-width: 0.5px;
+  border-bottom-color: gray;
   float: left;
-  width: 75%;
+  width: 77%;
   padding: 10px;
   height: 320px;
 }
@@ -113,49 +230,115 @@
 
 
 .Ttech {
+  border-top-style: solid;
+  border-top-width: 0.5px;
+  border-top-color: gray;
+  border-bottom-style: solid;
+  border-bottom-width: 0.5px;
+  border-bottom-color: gray;
   float: left;
-  width: 25%;
-  padding: 10px;
+  width: 20%;
+  /* top | right | bottom | left */
+  padding: 7px 6% 3em 6%;
   height: 300px;
+  text-decoration: underline;
+  font-style: italic;
 }
 
 .tech {
+  border-top-style: solid;
+  border-top-width: 0.5px;
+  border-top-color: gray;
+  border-bottom-style: solid;
+  border-bottom-width: 0.5px;
+  border-bottom-color: gray;
   float: left;
-  width: 75%;
+  width: 77%;
   padding: 10px;
   height: 300px;
 }
 
 .Tnext {
+  border-top-style: solid;
+  border-top-width: 0.5px;
+  border-top-color: gray;
+  border-bottom-style: solid;
+  border-bottom-width: 0.5px;
+  border-bottom-color: gray;
   float: left;
-  width: 25%;
-  padding: 10px;
-  height: 370px;
+  width: 20%;
+  /* top | right | bottom | left */
+  padding: 7px 6% 3em 6%;
+  height: 377px;
+  text-decoration: underline;
+  font-style: italic;
 }
 
 .next {
+  border-top-style: solid;
+  border-top-width: 0.5px;
+  border-top-color: gray;
+  border-bottom-style: solid;
+  border-bottom-width: 0.5px;
+  border-bottom-color: gray;
   float: left;
-  width: 75%;
+  width: 77%;
   padding: 10px;
-  height: 370px;
+  height: 377px;
 }
 
 .Tthanks {
+  border-top-style: solid;
+  border-top-width: 0.5px;
+  border-top-color: gray;
+  border-bottom-style: solid;
+  border-bottom-width: 0.5px;
+  border-bottom-color: gray;
   float: left;
-  width: 25%;
-  padding: 10px;
+  width: 20%;
+  /* top | right | bottom | left */
+  padding: 7px 6% 3em 6%;
   height: 80px;
+  text-decoration: underline;
+  font-style: italic;
 }
 
 .thanks {
+  border-top-style: solid;
+  border-top-width: 0.5px;
+  border-top-color: gray;
+  border-bottom-style: solid;
+  border-bottom-width: 0.5px;
+  border-bottom-color: gray;
   float: left;
-  width: 75%;
+  width: 77%;
   padding: 10px;
   height: 80px;
 }
 
+/*the little tidbits about the project hehe */
+/* Clear floats after the columns */
+.column {
+  border-top-style: solid;
+  border-top-width: 1px;
+  border-top-color: gray;
+  border-bottom-style: solid;
+  border-bottom-width: 0.5px;
+  border-bottom-color: gray;
+  float: left;
+  width: 25%;
+  padding: 0px;
+  height: 120px;
+  text-align: center;
+  font-style: italic;
 
-
+.facts:after {
+  content: "";
+  display: table;
+  clear: both;
+  text-align: center;
+  font-style: italic;
+}
 
 
 
@@ -164,33 +347,47 @@
   display: table;
   clear: both;
 }
-/* The title styling */
-.title {
-	text-align: center;
-}
 
 </style>
 </head>
 <body>
 <div class="title">
 <h1>Netic Health</h1>
+<p> Here is a teeny tiny description of the project. </p>
+</div>
+
+<div class="facts">
+  <div class="column" style="background-color:#FFFFFF;">
+    <h3>duration</h3>
+    <p> Spring '20 Semester </p>
+    <p> 4 months </p>
+  </div>
+  <div class="column" style="background-color:#FFFFFF;">
+    <h3>focus</h3>
+  </div>
+  <div class="column" style="background-color:#FFFFFF;">
+    <h3>partner</h3>
+  </div>
+  <div class="column" style="background-color:#FFFFFF;">
+    <h3>tools</h3>
+  </div>
 </div>
 
 <div class="article">
-  <div class="Tbackground" style="background-color:#FBB6F7;">
+  <div class="Tbackground" style="background-color:#FFFFFF;">
     <h3>Background</h3>
   </div>
-  <div class="background" style="background-color:#BBEA7B;">
+  <div class="background" style="background-color:#FFFFFF;">
     <p> Background : We partnered with Netic Health, a Berkeley based startup, on this project. Netic aims to provide physical therapy and rehabilitation to anyone through a smartphone. Our challenge was to wireframe an app to allow patients to track their physical therapy all while incentivizing them to complete their exercises. Additionally, we were tasked to create branding and further develop the ML basis for measuring the activity of the user. Our team comprised of six interdisciplinary members. Anika Singhania, a Computer Science major, was the project lead and worked on the wireframe. Allan Lee, a Bioengineering major, worked with the wireframe. Leilani Chu, a Molecular & Cell Biology major, designed the branding and worked on the wireframe. Philippa Steinberg, a Molecular & Cell Biology major, designed branding and worked on the wireframe. Reid Johnson, a Computer Science major, worked with the ML algorithms and coding. Carlos Lopez-Tenorio, a Data Science major, formulated the user testing and worked on the wireframe.</p>
 
   </div>
 </div>
 
 <div class="article">
-  <div class="Tempathize" style="background-color:#FBB6F7;">
+  <div class="Tempathize" style="background-color:#FFFFFF;">
     <h3>Empathize</h3>
   </div>
-  <div class="empathize" style="background-color:#BBEA7B;">
+  <div class="empathize" style="background-color:#FFFFFF;">
 
     <p> Empathize: - Pain Points:
       - Lacks adequate instructions to carry out home exercises
@@ -204,10 +401,10 @@
 </div>
 
 <div class="article">
-  <div class="Tdefine" style="background-color:#FBB6F7;">
+  <div class="Tdefine" style="background-color:#FFFFFF;">
     <h3>Define</h3>
   </div>
-  <div class="define" style="background-color:#BBEA7B;">
+  <div class="define" style="background-color:#FFFFFF;">
 
     <p> Define: Pain Points:
       - Lacks adequate instructions to carry out home exercises
@@ -222,10 +419,10 @@
 </div>
 
 <div class="article">
-  <div class="Tideate" style="background-color:#FBB6F7;">
+  <div class="Tideate" style="background-color:#FFFFFF;">
     <h3>Ideate</h3>
   </div>
-  <div class="ideate" style="background-color:#BBEA7B;">
+  <div class="ideate" style="background-color:#FFFFFF;">
 
    <p> Ideate: - We determined that the following features would help address all our users’ needs:
     			- Progress Tracker: display daily exercises completed and range of motion data
@@ -250,11 +447,11 @@
 </div>
 
 <div class="article">
-  <div class="Tprototype" style="background-color:#FBB6F7;">
+  <div class="Tprototype" style="background-color:#FFFFFF;">
     <h3> Prototype</h3>
 
   </div>
-  <div class="prototype" style="background-color:#BBEA7B;">
+  <div class="prototype" style="background-color:#FFFFFF;">
 
        <p> Prototype: Our App is composed of three key elements: tracking your health for each exercise, connecting to a PT and friendly competition with friends.
 
@@ -269,10 +466,10 @@
 
 
 <div class="article">
-  <div class="Ttest" style="background-color:#FBB6F7;">
+  <div class="Ttest" style="background-color:#FFFFFF;">
     <h3>Test</h3>
   </div>
-  <div class="test" style="background-color:#BBEA7B;">
+  <div class="test" style="background-color:#FFFFFF;">
 
     <p> Test:
 
@@ -292,10 +489,10 @@
 
 
 <div class="article">
-  <div class="Tsolution" style="background-color:#FBB6F7;">
+  <div class="Tsolution" style="background-color:#FFFFFF;">
     <h3>Solution</h3>
   </div>
-  <div class="solution" style="background-color:#BBEA7B;">
+  <div class="solution" style="background-color:#FFFFFF;">
 
 <p>Solution: Our Netic Health prototype went through various iterations before getting to its final form. Due to the fluctuating nature of the current situation and that of the startup process, we went through various changes during the semester. Starting with the name itself, what was once NeoMotion AI became Netic Health. Moreover, though at first the platform was solely a place to help patients who needed help with physical therapy, unrelated to any medical entity, the coronavirus pandemic showed the need for having a medical professional at hand and gave us an insight into the growth that we will most likely experience in the Telemedicine Industry in the coming months and years. Another feature introduced throughout the process was the idea of adding some sort of social gamification to the platform so as to make it more appealing for patients to follow-up on their treatment by encouraging healthy competition.
 
@@ -306,10 +503,10 @@ In the end, we were able to create a working Figma prototype that properly encom
 
 
 <div class="article">
-  <div class="Ttech" style="background-color:#FBB6F7;">
+  <div class="Ttech" style="background-color:#FFFFFF;">
     <h3>Technical Details</h3>
   </div>
-  <div class="tech" style="background-color:#BBEA7B;">
+  <div class="tech" style="background-color:#FFFFFF;">
 
     <p> For our app to function properly, it must be able to identify user poses with high accuracy and precision in realtime without access to ground truth background or camera location. The only plausible way to do this is machine learning, meaning that working with the Netic Tech Team, we needed to create models to learn both camera parameters and user poses with only a series of images as inputs. In pursuit of this goal, we reviewed, learned, and implemented the basics of pose estimation via an algorithm that roughly follows the guidelines outlined in [[KKA](https://arxiv.org/pdf/1903.02330.pdf)], using Python and TensorFlow for most of the heavy lifting.
 
@@ -321,10 +518,10 @@ We were significantly disrupted by the mid-semester shift, losing access to our 
 
 
 <div class="article">
-  <div class="Tnext" style="background-color:#FBB6F7;">
+  <div class="Tnext" style="background-color:#FFFFFF;">
     <h3>Reflect & Next Steps</h3>
   </div>
-  <div class="next" style="background-color:#BBEA7B;">
+  <div class="next" style="background-color:#FFFFFF;">
 
 <p> Reflection & Next Steps: Discuss overall takeaways from the project– Things you might have done differently, things you might have learned, and what you would do in the future.
 
@@ -339,12 +536,12 @@ As mentioned before, time after time we were forced to adapt to the situation ei
 
 
 <div class="article">
-  <div class="Tthanks" style="background-color:#FBB6F7;">
+  <div class="Tthanks" style="background-color:#FFFFFF;">
     <h3>Thank You </h3>
 
   </div>
 
-  <div class="thanks" style="background-color:#BBEA7B;">
+  <div class="thanks" style="background-color:#FFFFFF;">
 
 <p> Thanks: Thank you to Nik Yerasi and Mathias Vissers for giving us the opportunity to work on this project and for mentoring us throughout the process!</p>
 
