--- a/index.html
+++ b/index.html
@@ -77,40 +77,42 @@
         <div class="container">
             <h2>Our Projects</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Consequat nunc, enim libero varius purus, consectetur vel sem. </p>
-            <div class="grid-container">
-                <div class="item1"></div>
-                <div class="item2">
+            <div class="container">
+                <div class="row">
+                  <div class="col-sm">
                     <a href="projects/alemany-farm.html">
                         <img src="assets/img/alemany farm rect.svg" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);" alt="Alemany Farm">
                     </a>
-                </div>
-                <div class="item3">
+                  </div>
+                  <div class="col-sm">
                     <a href="projects/alemany-farm.html">
                         <img src="assets/img/community cafe rect.svg" alt="Pizza with a Purpose" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);">
                     </a>
-                </div>  
-                <div class="item4">
+                  </div>
+                  <div class="col-sm">
                     <a href="projects/alemany-farm.html">
                         <img src="assets/img/neomotion rect.svg" alt="NeoMotion AI" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);">
                     </a>
+                  </div>
                 </div>
-                <div class="item5"></div>
-                <div class="item6">
-                    <a href="projects/alemany-farm.html">
-                        <img class="card-img" src="assets/img/berkeley-food-icon.svg" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);"
-                        alt="Alemany Farm">
-                    </a>
+                <div class="row">
+                    <div class="col-sm">
+                        <a href="projects/alemany-farm.html">
+                            <img class="card-img" src="assets/img/berkeley-food-icon.svg" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);"
+                            alt="Alemany Farm">
+                        </a>
+                    </div>
+                    <div class="col-sm">
+                        <a href="projects/alemany-farm.html">
+                            <img class="card-img" src="assets/img/makerspace-icon.svg" alt="Alemany Farm" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);">
+                        </a>
+                    </div>
+                    <div class="col-sm">
+                        <a href="projects/alemany-farm.html">
+                            <img class="card-img" src="assets/img/groupsource-icon.svg" alt="Alemany Farm" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);">
+                        </a>
+                    </div>
                 </div>
-                <div class="item7">
-                    <a href="projects/alemany-farm.html">
-                        <img class="card-img" src="assets/img/makerspace-icon.svg" alt="Alemany Farm" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);">
-                    </a>
-                </div>
-                <div class="item8">
-                    <a href="projects/alemany-farm.html">
-                        <img class="card-img" src="assets/img/groupsource-icon.svg" alt="Alemany Farm" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);">
-                    </a>
-                </div>  
               </div>
             
         </div>
