made background black

--- a/underconstruction.html
+++ b/underconstruction.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="assets/css/underconstruction.css" type="text/css" />
 </head>
 
-<body>
+<body style="background-color: black;">
     <!-- Under Construction -->
     <section id="landing">
         <div class="container d-flex align-items-center justify-content-center" id="landing-container">
